--- a/app/views/spree/cust/orders/_line_item.html.erb
+++ b/app/views/spree/cust/orders/_line_item.html.erb
@@ -10,7 +10,7 @@
       <% end %>
     </td>
     <td class="cart-item-description" data-hook="cart_item_description">
-      <h4><%= link_to line_item.name, product_path(variant.product.id) %></h4>
+      <h4><%= link_to line_item.name, vendor_product_path(@order.vendor, variant.product.id) %></h4>
       <%= variant.options_text %>
       <% if line_item.insufficient_stock? %>
         <span class="out-of-stock">
