Fix responsive product view

--- a/app/assets/stylesheets/spree/manage/css/style.scss.erb
+++ b/app/assets/stylesheets/spree/manage/css/style.scss.erb
@@ -2178,7 +2178,8 @@ img{
 	    text-align: left;
 	    float: none;
 	}
-	.product-view-block .order-product-list .tRow .cel:nth-child(3), .product-view-block .order-product-list .tRow .cel:nth-child(4) {
+	.product-view-block .order-product-list .tRow .cel:nth-child(2), .product-view-block .order-product-list .tRow .cel:nth-child(3), 
+	.product-view-block .order-product-list .tRow .cel:nth-child(4) {
 	    width: 49%;
 	    float: none;
 	    text-align: left;
