--- a/app/assets/stylesheets/spree/manage/css/style.scss.erb
+++ b/app/assets/stylesheets/spree/manage/css/style.scss.erb
@@ -542,6 +542,17 @@ img{
     font-family: 'p22_underground_cy_prodemi';
     margin: 0 0 12px 0;
 }
+
+.edit-link{
+  font-size: 16px;
+  color:inherit;
+  text-decoration: none;
+  padding: 0px 20px;
+}
+.edit-link:hover{
+  color: #FF7E00;
+}
+
 .app_ui-wrapper .app_ui-block h3.title {
     font-size: 17px;
     line-height: 17px;
@@ -2178,7 +2189,7 @@ img{
 	    text-align: left;
 	    float: none;
 	}
-	.product-view-block .order-product-list .tRow .cel:nth-child(2), .product-view-block .order-product-list .tRow .cel:nth-child(3), 
+	.product-view-block .order-product-list .tRow .cel:nth-child(2), .product-view-block .order-product-list .tRow .cel:nth-child(3),
 	.product-view-block .order-product-list .tRow .cel:nth-child(4) {
 	    width: 49%;
 	    float: none;
