Apply styles to new customer form

--- a/app/views/spree/manage/customers/new.html.erb
+++ b/app/views/spree/manage/customers/new.html.erb
@@ -2,7 +2,7 @@
 
 <%#= ---=== KNOWN ISSUE: New customer does not work correctly due to routing / association issues related to customer/address relatiponship ===--- %>
 <%#= https://trello.com/c/YOpuCQuQ/16-manage-customers-new-functionality-does-not-work-no-route-matches-post %>
-
+<div class="customer-edit">
 <%= form_for @customer, url: manage_customers_url do |f| %>
   <% if @customer.errors.any? %>
     <div id="error_explanation">
@@ -33,6 +33,8 @@
   <% end %>
 
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit class: "update-customer"%>
   </div>
 <% end %>
+  <div class="clear"></div>
+</div>
