--- a/app/views/spree/layouts/customer.html.erb
+++ b/app/views/spree/layouts/customer.html.erb
@@ -57,7 +57,10 @@
             <%#-------------------------------------------------%>
             <%# Alerts                                          %>
             <%#-------------------------------------------------%>
-            <%= flash_alert(flash) %>
+
+            <div id="alert">
+              <%= flash_alert(flash) %>
+            </div>
             <%#= render partial: 'spree/admin/shared/alert', collection: session[:alerts] %>
 
             <%#-------------------------------------------------%>
