--- a/app/assets/stylesheets/spree/manage/alert.css
+++ b/app/assets/stylesheets/spree/manage/alert.css
@@ -1,3 +1,13 @@
+#alert{
+  position: fixed;
+  top: 50px;
+  width: 50%;
+  position: fixed;
+  left: 50%;
+  margin-left: -25%;
+  z-index: 1000;
+}
+
 .alert{
   display: block;
   text-align: center;
