change side menu icon for catalog

--- a/app/views/spree/manage/shared/side_menu/category/_products.html.erb
+++ b/app/views/spree/manage/shared/side_menu/category/_products.html.erb
@@ -1,7 +1,7 @@
 <a href="<%= manage_products_url %>">
 <h3>
-  <%=image_tag("spree/manage/img/nav-ico2.png")%>
-   <span class="tablet-hide">Products
+  <%=image_tag("spree/manage/img/catalog.png")%>
+   <span class="tablet-hide">Catalog
      <!-- <i class="fa fa-angle-left"></i> -->
    </span>
 </h3>
